Fix header menu spacing Finished

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -35,8 +35,8 @@
 
 .menu ul {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(4, auto);
+  justify-items: end;
 }
 
 .sidebar {
